--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,16 @@
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-datastore</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>6.12.2</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.google.cloud</groupId>-->
+<!--            <artifactId>google-cloud-secretmanager</artifactId>-->
+<!--            <version>1.0.1</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <dependencyManagement>
@@ -72,6 +82,13 @@
                 <groupId>com.google.cloud</groupId>
                 <artifactId>libraries-bom</artifactId>
                 <version>3.0.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.cloud</groupId>
+                <artifactId>libraries-bom</artifactId>
+                <version>4.4.1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
